--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   mysql:
     image: mysql:8.0
@@ -9,7 +8,6 @@ services:
     ports: ["3307:3306"]
     volumes:
       - ../init/mysql:/docker-entrypoint-initdb.d
-    # in here, we are setting the binlog file turn on to track them. 
     command:
       - --server-id=1
       - --log-bin=mysql-bin
@@ -20,7 +18,8 @@ services:
 
   zookeeper:
     image: bitnami/zookeeper:3.9
-    environment: { ALLOW_ANONYMOUS_LOGIN: "yes" }
+    environment:
+      ALLOW_ANONYMOUS_LOGIN: "yes"
     ports: ["2181:2181"]
 
   kafka:
@@ -50,35 +49,40 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka:9092
     ports: ["9000:9000"]
-  
-#   metastore-db:
-#     image: postgres:15
-#     environment:
-#       POSTGRES_USER: hive
-#       POSTGRES_PASSWORD: hivepw
-#       POSTGRES_DB: metastore
-#     volumes: [metastore-data:/var/lib/postgresql/data]
 
-#   # hive-metastore:
-#   #   image: bitsondatadev/hive-metastore:3.1.3
-#   #   depends_on: [metastore-db]
-#   #   environment:
-#   #     METASTORE_DB_HOST: metastore-db
-#   #     METASTORE_DB_NAME: metastore
-#   #     METASTORE_DB_USER: hive
-#   #     METASTORE_DB_PASS: hivepw
-#   #     WAREHOUSE_LOCATION: file:///data/warehouse
-#   #   ports: ["9083:9083"]
-#   #   volumes:
-#   #     - ../:/data
+  # --- Hive Metastore stack ---
+  metastore-db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: hive
+      POSTGRES_PASSWORD: hivepw
+      POSTGRES_DB: metastore
+      POSTGRES_INITDB_ARGS: "--auth-host=md5 --auth-local=md5"
+    volumes:
+      - metastore-data:/var/lib/postgresql/data
+      - ./init/postgres:/docker-entrypoint-initdb.d:ro
 
-#   trino:
-#     image: trinodb/trino:latest
-#     depends_on: [hive-metastore]
-#     ports: ["8080:8080"]
-#     volumes:
-#       - ./trino/etc/catalog:/etc/trino/catalog
-#       - ../:/data  # same mount so Trino sees files
-# volumes:
-#   metastore-data:
+  hive-metastore:
+    image: apache/hive:3.1.3
+    platform: linux/amd64
+    depends_on: [metastore-db]
+    ports: ["9083:9083"]
+    command: ["/opt/hive/bin/hive","--service","metastore","-p","9083"]
+    volumes:
+      - ./hive/conf/hive-site.xml:/opt/hive/conf/hive-site.xml:ro
+      - ../:/lakehouse
 
+
+
+
+  # --- Trino ---
+  trino:
+    image: trinodb/trino:latest
+    depends_on: [hive-metastore]
+    ports: ["8080:8080"]
+    volumes:
+      - ./trino/etc/catalog:/etc/trino/catalog
+      - ../:/lakehouse
+
+volumes:
+  metastore-data:
